# tui-slider

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DUAL_HOSTING.md  GITEA_SETUP.md  LICENSE  MULTIPLE_GITEA.md  README.md  RELEASE.md  RELEASE_QUICK_START.md  RELEASE_WORKFLOW.md  SSH_SETUP.md  cliff.toml  justfile
.gitea/workflows/: ci.yml  release.yml
.github/: WORKFLOWS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  release.yml
docs/: JUSTFILE_PATTERNS.md
examples/: EXAMPLES_GALLERY.md  README.md  border_colors.rs  border_styles.rs  borders.rs  comprehensive_demo.rs  custom.rs  custom_symbols.rs  handle_toggle.rs  handles.rs  horizontal.rs  horizontal_bar_alignment.rs  horizontal_styles.rs  progress_bars.rs  status_bars.rs  step_sizes.rs  thumb_toggle.rs  title_alignment.rs  value_alignment.rs  vertical.rs  vertical_positioning.rs  vertical_styles.rs  width_test.rs
examples/vhs/: README.md  border_colors.tape  border_styles.tape  borders.tape  comprehensive_demo.tape  custom.tape  custom_symbols.tape  handle_toggle.tape  handles.tape  horizontal.tape  horizontal_bar_alignment.tape  horizontal_styles.tape  progress_bars.tape  status_bars.tape  step_sizes.tape  thumb_toggle.tape  title_alignment.tape  value_alignment.tape  vertical.tape  vertical_positioning.tape  vertical_styles.tape
scripts/: README.md  bump_version.sh  check_publish.sh  generate_all_tapes.sh  migrate-all-projects.sh  migrate-to-gitea.sh  setup-gitea.sh  setup-just.sh
src/: border.rs  lib.rs  orientation.rs  position.rs  slider.rs  state.rs  style.rs  symbols.rs
